# esdp_project_progress

./: .env  .example.env  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yaml  example.env  pyproject.toml
nginx/: Dockerfile  (+1 more)
source/: .dockerignore  .gitignore  example.env  init_and_run.sh  manage.py  mydatabase  pyproject.toml
source/accounts/: account_type_choices.py  account_types.py  admin.py  context_processor.py  filters.py  forms.py  json_form_handler.py  models.py  tests.py  urls.py  user_queryset.py  views.py
source/courses/: __init__.py  admin.py  apps.py  image_load.py  lesson_choices.py  lesson_types.py  models.py  tests.py  urls.py  views.py
source/main_config/: asgi.py  settings.py  urls.py  wsgi.py
source/online_tests/: admin.py  apps.py  models.py  online_test_type_choices.py  online_test_types.py  serializers.py  tests.py  urls.py  views.py
source/pages/: admin.py  apps.py  context_processor.py  models.py  page_choice.py  tests.py
source/site_pages/: admin.py  apps.py  context_processor.py  models.py  tests.py
source/templates/: base.html
source/tests/: admin.py  apps.py  models.py  test_admin_accounts.py  test_admin_courses.py  test_admin_online_courses.py  test_admin_pages.py  test_context_processor_accounts.py  test_context_processor_pages.py  test_forms_accounts.py  test_image_load_courses.py  test_json_form_handler.py  test_models_online_tests.py  test_models_pages.py  test_serializers_online_tests.py  test_url_courses.py  test_views_accounts.py  test_views_courses.py  test_views_online_tests.py  urls.py  views.py
(+143 files in other folders)
